@@ -7,6 +7,8 @@ Changes in openair 0.7-0 [2012-05-30]
 *	Added 'nativeRaster' class handler for GoogleMapsPlots
 *	(test) Fix for GoogleMapsPlot xlim, ylim
 *	Do not remove missing data from timeVariation
+*	Fix bug in FAC2 in modStats when observations = 0 (exclude
+	from calculation because indeterminate)
 
 Changes in openair 0.6-0 [2012-04-10]
 =====================================
